# project_1

./: .coverage  .flake8  .gitignore  README.md  example.py  pyproject.toml
src/: decorators.py  generators.py  main.py  masks.py  processing.py  processings.py  widget.py
tests/: conftest.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
utils/: hello.py
