[project]
name = "my-prj"
version = "0.1.0"
description = ""
authors = [
    {name = "ghost",email = "ghost_777_86@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.black]
line-length = 119
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2
lines_between_types = 1
force_sort_within_sections = false
atomic = false
single_line_exclusions = []

[tool.mypy]
python_version = "3.10"
strict_optional = true
disallow_untyped_defs = true
warn_return_any = true
check_untyped_defs = true
show_error_context = true
exclude = ["venv"]

[tool.pytest.ini_options]
pythonpath = ["src"]